# miden-multisig

./: .gitignore  Cargo.toml  README.md
masm/accounts/: hashing_test.masm  multisig.masm  multisig_auth.masm  old_multisig.masm
masm/auth/: multisig_auth.masm  no_auth.masm
masm/scripts/: hash_testing_script.masm  helper_note_consume_script.masm  sig_check_script.masm
scripts/: setup_node.sh
src/: common.rs
tests/: create_note_multisig.rs  hashing_tests.rs  multisig_invariant_tests.rs  signature_check_loop.rs
